# hippocampus

./: .coverage  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-validation.yml  release.yml
core/: __init__.py
core/application/: __init__.py  pipeline.py  validation.py
core/application/pipeline/: __init__.py  assemble.py  core.py  extract.py  io.py  load.py  metrics.py  report.py  validate.py
core/cli/: exit_codes.py  root.py
core/domain/: interfaces.py  manifest.py
core/infrastructure/config/: manager.py  resolver.py
core/infrastructure/extraction/: heuristic.py  langchain_agent.py
core/infrastructure/formatters/: json_writer.py
core/infrastructure/loaders/: latex.py  markdown.py  pdf.py  registry.py  text.py
core/infrastructure/logging/: __init__.py  structured.py
core/noesis/graph/: README.md  agent.py  types.py
core/noesis/graph/nodes/: classify.py  consolidate.py  extract.py
core/reliability/: retry.py
core/resources/: __init__.py
core/resources/prompts/: __init__.py  classify_reference_type_en.md  consolidate_manifest_en.md  extract_references_en.md
core/resources/schemas/: __init__.py  manifest.schema.json
core/resources/templates/: __init__.py  config_apply.yaml.j2  config_set.j2  error.j2  heuristic_begin.j2  heuristic_end.j2  heuristic_extract.j2  heuristic_load.j2  heuristic_report.j2  heuristic_run.j2  llm_run.j2  manager.py
core/resources/templates/cli/: base_macros.j2  begin_generic.j2  end_generic.j2  phase_extract_generic.j2  phase_load_generic.j2  report_generic.j2  summary_generic.j2
core/ui/: console.py
docs/: BACKLOG.md  TODO.md  design_doc.md  pr-2-review-summary.md  pr-3-review-summary.md  pr-4-review-summary.md  pr-9-arquivos-analise.md  pr-9-review-summary.md
docs-user/: cli.md  configuration.md  index.md  installation.md  troubleshooting.md  usage.md
tests/: conftest.py
tests/application/: test_manifest_version.py  test_pipeline.py  test_pipeline_file.py  test_schema_polymorphism.py  test_schema_polymorphism_extra_types.py  test_validation.py  test_validation_messages.py
tests/application/pipeline/: test_assemble.py  test_branches.py  test_core.py  test_errors.py  test_extract.py  test_file_verbose_branch.py  test_happy.py  test_integration_validation.py  test_io.py  test_llm_branch_import_and_instantiation.py  test_llm_graph_integration.py  test_load.py  test_logging_integration.py  test_metrics.py  test_report.py  test_report_and_end.py  test_validate.py
tests/cli/: test_collect.py  test_collect_validation_integration.py  test_main.py  test_root.py  test_root_file.py  test_set.py
tests/domain/: test_interfaces.py  test_manifest.py
tests/fixtures/cli/: args.py
tests/fixtures/common/: paths.py
tests/fixtures/domain/: interfaces.py
tests/fixtures/infrastructure/: loader_text.py
tests/infrastructure/config/: test_manager.py  test_resolver.py
tests/infrastructure/extraction/: test_doi_normalization.py  test_heuristic.py  test_invalid_provider.py  test_langchain_agent_retries.py
tests/infrastructure/extraction/langchain_agent/: test_advanced_features.py  test_agent_errors.py  test_agent_happy.py  test_deepseek_base_url.py  test_model_creation.py  test_normalization.py  test_provider_errors.py
tests/infrastructure/formatters/: test_json_writer.py
tests/infrastructure/loaders/: test_latex.py  test_markdown.py  test_pdf.py  test_text.py
tests/infrastructure/logging/: test_structured_logger.py
tests/noesis/graph/: test_agent.py  test_classify.py  test_consolidate.py  test_extract.py  test_extract_llm_paths.py  test_extract_node.py
tests/resources/: test_templates.py
tests/ui/: test_console.py
