[project]
name = "hippocampus"
version = "0.3.0"
description = "Knowledge acquisition pipelines with clean architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"jsonschema>=4",
	"pypdf>=6.0.0",
]

[project.optional-dependencies]
llm = [
	"langchain>=0.2",
	"langgraph>=0.2",
]
pdf = [
	"pypdf>=4",
]

[project.scripts]
hippocampus = "core.cli.root:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyment>=0.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]
