[project]
name = "hippocampus"
version = "0.6.0"
description = "Knowledge acquisition pipelines with clean architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"jsonschema>=4",
	"pypdf>=6.0.0",
	"pyyaml>=6.0",
    "keyring>=24.0",
	"jinja2>=3.1",
	"rich>=13.7",
	"langchain>=0.3.27",
	"langchain-openai>=0.3.33",
	"langchain-google-genai>=2.1.12",
	"langchain-anthropic>=0.3.20",
]



[project.scripts]
hippocampus = "core.cli.root:main"
hippo = "core.cli.root:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyment>=0.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]
